# rwh

ch1/: WC.hs
ch3/: BookStore.hs
ch4/: Adler32.hs  FixLines.hs  Fold.hs  IntParse.hs  InteractWith.hs  SplitLines.hs
ch4/bk/: Addler.hs  IntParse.hs  SplitLines.hs  out.hs
ch5/: Main.hs  PutJSON.hs
ch5/bk/: PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs
ch5/bk/mypretty/: Prettify.hs  PrettyJSON.hs  mypretty.cabal
ch5/mypretty/: Prettify.hs  PrettyJSON.hs  Setup.hs  mypretty.cabal
ch6/: JSONClassh.hs  SimpleJSON.hs  SimpleResult.hs  eqclasses.hs
