Name: mypretty
Version: 0.1
Synopsis: My pretty-printing library, with JSON support
Description:
    A simple pretty-printing library
Author: Brian Wang
Maintainer: xingmu1978@hotmail.com
Cabal-Version: >= 1.2
build-type: Simple
library
  Exposed-Modules: Prettify
                   PrettyJSON
                   SimpleJSON
  Build-Depends: base >= 2.0

